# luatos-esp32s3-a10-camera

./: .gitignore  CMakeLists.txt  CODE_WIKI.md  LICENSE  README.md  README_CN.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
docs/: README.md
docs/en/: README.md  api.md  at_commands.md  hardware.md  software.md  troubleshooting.md
docs/zh-CN/: README.md  api.md  at_commands.md  hardware.md  software.md  troubleshooting.md
main/: CMakeLists.txt  Kconfig.projbuild  at_command.c  at_command.h  cJSON.h  camera_driver.c  camera_driver.h  config_manager.c  config_manager.h  event_bus.c  event_bus.h  frame_broadcaster.c  frame_broadcaster.h  health_monitor.c  health_monitor.h  idf_component.yml  main.c  mjpeg_streamer.c  mjpeg_streamer.h  motion_detect.c  motion_detect.h  onvif_discovery.c  onvif_discovery.h  onvif_service.c  onvif_service.h  status_led.c  status_led.h  time_sync.c  time_sync.h  web_server.c  web_server.h  webhook.c  webhook.h  wifi_manager.c  wifi_manager.h
main/web_ui/: config.html  index.html  preview.html  setup.html
